# BlackJack

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/cards/: abstractcard.cpp  abstractcard.h
source/dialogWindows/: settingwindow.cpp  settingwindow.h
source/gameController/: betwidget.cpp  cardvisibilitytoggle.cpp  cardvisibilitytoggle.h  gameController.cpp  gameController.h  newcardwidget.cpp  newcardwidget.h
source/graphicsItems/: betwidget.cpp  betwidget.h  cardvisibilitytoggle.cpp  cardvisibilitytoggle.h  circlewidget.cpp  circlewidget.h  gamewidget.cpp  gamewidget.h  label.cpp  label.h  newcardwidget.cpp  newcardwidget.h
source/model/: cardmodel.cpp  cardmodel.h  cardsuit.h  playermodel.cpp  playermodel.h
source/players/: abstractplayer.cpp  abstractplayer.h  dealer.cpp  dealer.h  player.h
source/resource/: darkCards.qrc  frontcardimage.qrc
source/resource/styleswindowsettings/: dealogWindowFile.qrc
source/scene/: gamewidget.cpp  gamewidget.h  mainwindow.cpp  mainwindow.h  newcardwidget.cpp  scene.cpp  scene.h  sceneview.cpp  sceneview.h
